# mavi-vpn

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODEWIKI.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  SECURITY_REVIEW_CHECKLIST.md  build_windows_msi.py  ci_logs.txt  deny.toml  install.sh  install_cli_linux.py  install_cli_windows.py  install_gui_linux.py  install_gui_windows.py  installer_common.py  main.rs  security-exceptions.toml  uninstall_cli_linux.py  uninstall_cli_windows.py  uninstall_gui_linux.py  uninstall_gui_windows.py
.cargo/: audit.toml  config.toml
.claude/: settings.local.json
.codex/: config.toml
.codex-tmp/excel-demo/: build_demo.mjs
.github/: dependabot.yml
.github/workflows/: build.yml  clippy.yml  dependabot-auto-merge.yml  lint.yml  security.yml  test.yml  tests.yml  update-forks.yml
android/: build.gradle.kts  gradlew  settings.gradle.kts
android/app/src/main/rust/: Cargo.toml
android/app/src/main/rust/src/: connection.rs  crypto.rs  ech_client.rs  jni.rs  lib.rs  session.rs  vpn_loop.rs
android/app/src/main/rust/src/connection/: h2.rs  http3.rs  tests.rs  validation.rs
android/app/src/main/rust/src/jni/: socket.rs  tests.rs
android/app/src/main/rust/src/vpn_loop/: android.rs  framing.rs  icmp.rs  stats.rs
backend/: .env.example  API.md  Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh
backend/keycloak/: docker-compose.yml  mavi-vpn-realm.json  nginx-sample.conf
backend/src/: cert.rs  config.rs  ech.rs  handler.rs  keycloak.rs  main.rs  routing.rs  state.rs  utils.rs
backend/src/cert/: tests.rs
backend/src/config/: mod.rs  tests.rs
backend/src/handlers/: auth.rs  connection.rs  h3.rs  h3_capsules.rs  mod.rs  tunnel.rs  utils.rs
backend/src/handlers/connection/: reauth.rs  tests.rs
backend/src/handlers/h3/: tests.rs
backend/src/handlers/tunnel/: http2.rs
backend/src/keycloak/: test_keys.rs  tests.rs
backend/src/keycloak/tests/: claim_policy_tests.rs
backend/src/network/: mod.rs  tun.rs
backend/src/network/h3_quinn/: mod.rs  stream.rs
backend/src/server/: http2.rs  mod.rs  quic.rs
backend/src/server/http2/: tests.rs
backend/src/state/: mod.rs  rate_limit.rs  tests.rs
docs/: INSTALLATION.md  NGINX_PROXY.md  QUINN_CHANGES.md  whitepaper.tex
gui/: .eslintrc.json  .prettierignore  eslint.config.mjs  package-lock.json  package.json  vite.config.js  vitest.config.js
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/linux/: postinst  prerm
gui/src-tauri/src/: commands.rs  ipc.rs  lib.rs  logging.rs  main.rs  oauth.rs  secret_store.rs  storage.rs  tray.rs
gui/src-tauri/src/commands/: keycloak.rs
gui/src-tauri/src/commands/keycloak/: tests.rs
gui/src-tauri/src/storage/: tests.rs
gui/src-tauri/wix/: service.wxs
linux/: Cargo.toml  README.md  mavi-vpn.service
linux/src/: daemon.rs  ech_client.rs  main.rs  network.rs  oauth.rs  tun.rs  vpn_core.rs
linux/src/cli/: config.rs  mod.rs
linux/src/daemon/: ipc_limit_tests.rs  mod.rs  tests.rs  transport.rs
linux/src/network/: app_split.rs  command.rs  dns.rs  routes.rs  tests.rs  whitelist.rs
linux/src/network/app_split/: process.rs
linux/src/vpn_core/: cert_pin.rs  h2.rs  h3.rs  handshake.rs  kc_refresh.rs  session.rs  socket.rs
linux/src/vpn_core/handshake/: tests.rs
linux/src/vpn_core/session/: lifecycle.rs  network_assignment.rs  packet_pumps.rs  reauth.rs  tests.rs
quic-tester/: Cargo.toml
quic-tester/src/: main.rs
scripts/: check_fork_sources.py  check_security_exceptions.py
shared/: Cargo.toml
shared/src/: cert_pin.rs  config_code.rs  control.rs  endpoint.rs  hex.rs  http2.rs  icmp.rs  ipc.rs  kc_oauth.rs  lib.rs  masque.rs  mtu.rs  session_errors.rs  split_tunnel.rs  test_helpers.rs  tests.rs
shared/src/ipc/: mod.rs  tests.rs  transport.rs
shared/src/kc_oauth/: callback.rs  mod.rs  server.rs  tests.rs
shared/src/masque/: tests.rs
shared/src/tests/: control_auth_clone_tests.rs  control_auth_empty_token_tests.rs  control_auth_roundtrip_tests.rs  control_config_clone_tests.rs  control_config_dual_stack_roundtrip_tests.rs  control_config_ipv4_roundtrip_tests.rs  control_error_clone_tests.rs  control_error_roundtrip_tests.rs  control_whitelist_none_tests.rs  control_whitelist_order_tests.rs  icmp_empty_packet_tests.rs  icmp_ipv4_default_source_tests.rs  icmp_ipv4_embeds_header_plus_eight_tests.rs  icmp_ipv4_generates_reply_tests.rs  icmp_ipv4_rejects_v6_override_tests.rs  icmp_ipv4_reply_targets_client_tests.rs  icmp_ipv4_reported_mtu_tests.rs  icmp_ipv4_type_code_tests.rs  icmp_ipv4_uses_override_source_tests.rs  icmp_ipv6_default_source_tests.rs  icmp_ipv6_embeds_truncated_original_packet_tests.rs  icmp_ipv6_generates_reply_tests.rs  icmp_ipv6_rejects_v4_override_tests.rs  icmp_ipv6_reply_targets_client_tests.rs  icmp_ipv6_reported_mtu_tests.rs  icmp_ipv6_truncation_limit_tests.rs  icmp_ipv6_type_code_tests.rs  icmp_ipv6_uses_override_source_tests.rs  icmp_short_ipv4_tests.rs  icmp_short_ipv6_tests.rs  icmp_unknown_version_tests.rs  ipc_config_full_roundtrip_tests.rs  ipc_config_minimal_roundtrip_tests.rs  ipc_local_addr_tests.rs  ipc_request_start_roundtrip_tests.rs  ipc_request_status_roundtrip_tests.rs  ipc_request_stop_roundtrip_tests.rs  ipc_response_error_roundtrip_tests.rs  ipc_response_ok_roundtrip_tests.rs  ipc_response_status_roundtrip_tests.rs  (+3 more)
website/: nginx.conf
windows/: Cargo.toml  README.md
windows/src/: client_config.rs  client_ipc.rs  client_prompt.rs  ech_client.rs  ipc.rs  main.rs  main_tests.rs  oauth.rs  secrets.rs  vpn_core.rs
windows/src/vpn_core/: handshake.rs  kc_refresh.rs  mod.rs  network.rs  pump.rs  reauth.rs  reconnect.rs  runtime_state.rs  session.rs  tests.rs  wintun_mod.rs
windows/src/vpn_core/handshake/: cert.rs  h2.rs  h3.rs  tests.rs
windows/src/vpn_core/network/: adapter.rs  cleanup.rs  command_runner.rs  dns.rs  host_route.rs  ip.rs  mod.rs  route.rs  session.rs  socket.rs  utils.rs  whitelist.rs
windows/src/vpn_core/network/adapter/: tests.rs
(+86 files in other folders)
