[workspace]
resolver = "2"
members = [
    "backend",
    "shared",
    "android/app/src/main/rust",
    "windows", "quic-tester",
    "linux",
    "gui/src-tauri",
]

[workspace.dependencies]
shared = { path = "shared" }
tokio = { version = "1.0", features = ["full"] }
quinn = { version = "=0.11.9", default-features = false, features = ["rustls", "runtime-tokio", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
anyhow = "1.0"
bytes = "1.0"
socket2 = { version = "0.6", features = ["all"] }
serde = { version = "1.0", features = ["derive"] }
bincode = { package = "bincode-next", version = "3.0.0-rc.2", features = ["serde"] }
tracing = "0.1"
time = "=0.3.36"
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }
rustls-pemfile = "2.0"
ipnetwork = "0.21"
etherparse = "0.19"
dashmap = "6.1"
thiserror = "2.0"
h3 = "0.0.8"
h3-quinn = { version = "0.0.10", features = ["datagram"] }
tempfile = "3"
proptest = "1"

[patch.crates-io]
quinn = { path = "external/quinn/quinn" }
quinn-proto = { path = "external/quinn/quinn-proto" }
quinn-udp = { path = "external/quinn/quinn-udp" }
# Local h3 / h3-quinn copies were removed. We use upstream hyperium/h3 master branch
# since it now contains RFC 9484 (connect-ip) Protocol::CONNECT_IP support.
h3 = { git = "https://github.com/hyperium/h3", rev = "704b37a2e82cf4c8de379ec779dbc2a23bfcb9a1" }
h3-quinn = { git = "https://github.com/hyperium/h3", rev = "704b37a2e82cf4c8de379ec779dbc2a23bfcb9a1" }
h3-datagram = { git = "https://github.com/hyperium/h3", rev = "704b37a2e82cf4c8de379ec779dbc2a23bfcb9a1" }
time = { git = "https://github.com/time-rs/time", tag = "v0.3.36" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
