[workspace]
resolver = "2"
members = [
    "backend",
    "shared",
    "android/app/src/main/rust",
    "windows", "quic-tester",
    "linux",
    "gui/src-tauri",
]

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"


[workspace.dependencies]
shared = { path = "shared" }
tokio = { version = "1.0", features = ["full"] }
quinn = { version = "=0.12.0", default-features = false, features = ["rustls", "runtime-tokio", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
anyhow = "1.0"
bytes = "1.0"
socket2 = { version = "0.6", features = ["all"] }
serde = { version = "1.0", features = ["derive"] }
bincode = { package = "bincode-next", version = "3.0.0-rc.2", features = ["serde"] }
tracing = "0.1"
time = "=0.3.36"
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }
rustls-pki-types = "1.10"
ipnetwork = "0.21"
etherparse = "0.20"
dashmap = "6.1"
thiserror = "2.0"
h3 = "0.0.8"
h3-quinn = { version = "0.0.10", features = ["datagram"] }
tempfile = "3"
proptest = "1"
dotenvy = "0.15"
http = "1"
async-trait = "0.1"

[patch.crates-io]
quinn = { git = "https://github.com/zerox80/quinn", branch = "main" }
quinn-proto = { git = "https://github.com/zerox80/quinn", branch = "main" }
quinn-udp = { git = "https://github.com/zerox80/quinn", branch = "main" }
# Use our h3 fork so h3-quinn resolves to Quinn 0.12. This prevents a second
# crates.io Quinn 0.11 dependency from being pulled in alongside the fork.
h3 = { git = "https://github.com/zerox80/h3", branch = "main" }
h3-quinn = { git = "https://github.com/zerox80/h3", branch = "main" }
h3-datagram = { git = "https://github.com/zerox80/h3", branch = "main" }
time = { git = "https://github.com/time-rs/time", tag = "v0.3.36" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

