[workspace]
resolver = "2"
members = [
    "backend",
    "shared",
    "android/app/src/main/rust",
    "windows", "quic-tester",
    "linux",
    "gui/src-tauri",
]

[workspace.package]
# Minimum supported Rust version for the whole workspace. Bounded by the
# locked dependency set (constant_time_eq 0.5 requires 1.95); bump it here
# when a dependency raises the floor so older toolchains fail with a clear
# "package requires rustc X" error instead of an opaque build failure.
rust-version = "1.95"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"


[workspace.dependencies]
shared = { path = "shared" }
tokio = { version = "1.0", features = ["full"] }
quinn = { version = "=0.12.0", default-features = false, features = ["rustls", "runtime-tokio", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
anyhow = "1.0"
bytes = "1.0"
socket2 = { version = "0.6", features = ["all"] }
serde = { version = "1.0", features = ["derive"] }
bincode = { package = "bincode-next", version = "3.0.0-rc.2", features = ["serde"] }
tracing = "0.1"
time = "=0.3.36"
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }
rustls-pki-types = "1.10"
ipnetwork = "0.21"
etherparse = "0.20"
dashmap = "6.1"
thiserror = "2.0"
h3 = "0.0.8"
h3-quinn = { version = "0.0.10", features = ["datagram"] }
tempfile = "3"
proptest = "1"
dotenvy = "0.15"
http = "1"
http-body-util = "0.1"
h2 = "0.4"
hyper = { version = "1", default-features = false, features = ["http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-rustls = "0.26"
tokio-stream = "0.1"
async-trait = "0.1"

[patch.crates-io]
quinn = { git = "https://github.com/zerox80/quinn", rev = "760ba55d0192cc2b3da86f184d7a9f3874738515" }
quinn-proto = { git = "https://github.com/zerox80/quinn", rev = "760ba55d0192cc2b3da86f184d7a9f3874738515" }
quinn-udp = { git = "https://github.com/zerox80/quinn", rev = "760ba55d0192cc2b3da86f184d7a9f3874738515" }
# Use our h3 fork so h3-quinn resolves to Quinn 0.12. This prevents a second
# crates.io Quinn 0.11 dependency from being pulled in alongside the fork.
h3 = { git = "https://github.com/zerox80/h3", rev = "99533cd3f198cd9b548d5264cd7bff07e7d08cc0" }
h3-quinn = { git = "https://github.com/zerox80/h3", rev = "99533cd3f198cd9b548d5264cd7bff07e7d08cc0" }
h3-datagram = { git = "https://github.com/zerox80/h3", rev = "99533cd3f198cd9b548d5264cd7bff07e7d08cc0" }
time = { git = "https://github.com/time-rs/time", rev = "3c3c546a661ac59e1a586a4edc65adff04fd1335" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

