[package]
name = "mavi-vpn"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
quinn = { workspace = true, default-features = false, features = ["rustls"] }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }
tun = { version = "0.8", features = ["async"] }
anyhow = { workspace = true }
dotenv = "0.15"
bytes = { workspace = true }
futures-util = "0.3"
base64 = "0.22"
tracing = { workspace = true }
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive", "env"] }
dashmap = { workspace = true }
ipnetwork = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
etherparse = { workspace = true }
constant_time_eq = "0.4"
shared = { workspace = true }
sha2 = "0.10"
hex = "0.4"
socket2 = { workspace = true }
libc = "0.2"

