[package]
name = "mavi-vpn"
version = "0.1.0"
edition = "2021"
description = "Mavi VPN Backend Service"
license = "MIT"
repository = "https://github.com/zerox80/mavi-vpn"
readme = "../README.md"
keywords = ["vpn", "quic", "privacy"]
categories = ["network-programming"]


[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
quinn = { workspace = true, default-features = false, features = ["rustls"] }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }

rcgen = { workspace = true }
tun = { version = "0.8", features = ["async"] }
anyhow = { workspace = true }
dotenvy = { workspace = true }
http = "1"
h3 = { workspace = true }
h3-quinn = { workspace = true }
bytes = { workspace = true }
futures-util = "0.3"
tokio-util = "0.7"
base64 = "0.22"
tracing = { workspace = true }
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive", "env"] }
dashmap = { workspace = true }
ipnetwork = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
etherparse = { workspace = true }
constant_time_eq = "0.5"
shared = { workspace = true }
sha2 = "0.11"
hex = "0.4"
socket2 = { workspace = true }
libc = "0.2"
mimalloc = "0.1.48"
jsonwebtoken = { version = "10.3", default-features = false, features = ["aws_lc_rs"] }
reqwest = { version = "0.13", features = ["json", "rustls-no-provider"], default-features = false }
serde_json = "1.0"

[dev-dependencies]
tempfile = { workspace = true }

[features]
tracing = []

