[package]
name = "linux-vpn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mavi-vpn"
path = "src/main.rs"

[dependencies]
shared = { workspace = true }
tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
socket2 = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
etherparse = { workspace = true }
reqwest = { version = "0.13", features = ["json", "rustls", "form"], default-features = false }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"

sha2 = "0.11.0"
rand = "0.8"
base64 = "0.22"
url = "2.5"
libc = "0.2"
nix = { version = "0.29", features = ["ioctl", "net", "fs"] }
wtransport = { workspace = true }
h2 = { workspace = true }
tokio-rustls = { workspace = true }
http = { workspace = true }


