[package]
name = "linux-vpn"
version = "0.1.0"
edition = "2021"
description = "Mavi VPN Linux Client"
license = "MIT"
repository = "https://github.com/zerox80/mavi-vpn"
readme = "../README.md"
keywords = ["vpn", "quic", "privacy"]
categories = ["network-programming"]

[[bin]]
name = "mavi-vpn"
path = "src/main.rs"


[lints]
workspace = true

[dependencies]
shared = { workspace = true }
tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
socket2 = { workspace = true }
http = "1"
h3 = { workspace = true }
h3-quinn = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
etherparse = { workspace = true }
reqwest = { version = "0.13", features = ["json", "rustls-no-provider", "form"], default-features = false }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"

sha2 = "0.11.0"
rand = "0.10"
base64 = "0.22"
constant_time_eq = "0.5"
url = "2.5"
libc = "0.2"
nix = { version = "0.31", features = ["ioctl", "net", "fs", "user"] }

[dev-dependencies]
tempfile = { workspace = true }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

