[package]
name = "shared"
version = "0.1.0"
edition = "2021"
description = "Mavi VPN Shared Library"
license = "MIT"
repository = "https://github.com/zerox80/mavi-vpn"
readme = "../README.md"
keywords = ["vpn", "quic", "privacy"]
categories = ["network-programming"]


[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
etherparse = { workspace = true }
# We don't need many deps here, just types.

# Keycloak OAuth client helpers (token parse / JWT-exp / refresh). Optional so
# the backend — which only validates tokens — does not pull a HTTP client.
# Enabled by the desktop clients (gui, windows, linux) via the `oauth-client` feature.
serde_json = { version = "1.0", optional = true }
base64 = { version = "0.22", optional = true }
reqwest = { version = "0.13", features = ["json", "rustls-no-provider", "form"], default-features = false, optional = true }
rustls = { workspace = true, optional = true }

[dev-dependencies]
bincode = { workspace = true }
proptest = { workspace = true }

[features]
default = []
# Pulls in the `kc_oauth` module and its HTTP/JSON/base64 dependencies.
oauth-client = ["dep:serde_json", "dep:base64", "dep:reqwest", "dep:rustls"]

