[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
description = "Mavi VPN Shared Library"
license = "MIT"
repository = "https://github.com/zerox80/mavi-vpn"
readme = "../README.md"
keywords = ["vpn", "quic", "privacy"]
categories = ["network-programming"]


[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
etherparse = { workspace = true }
# We don't need many deps here, just types.
# Used by cert_pin's multi-pin SHA-256 matching (already pulled in transitively
# by backend/linux/windows via rustls; listing it here just makes the direct
# dependency explicit for this crate).
sha2 = "0.11"
constant_time_eq = "0.5"

# Keycloak OAuth client helpers (token parse / JWT-exp / refresh). Optional so
# the backend — which only validates tokens — does not pull a HTTP client.
# Enabled by the desktop clients (gui, windows, linux) via the `oauth-client` feature.
serde_json = { version = "1.0", optional = true }
base64 = { version = "0.22", optional = true }
reqwest = { version = "0.13", features = ["json", "rustls-no-provider", "form"], default-features = false, optional = true }
rustls = { workspace = true, optional = true }
# Loopback PKCE callback listener (shared by gui/windows/linux). The shared crate
# owns the concurrent accept loop so a stray/stalled local connection can never
# delay the real browser callback. A curated (non-`full`) feature set keeps the
# footprint minimal: io-util (bounded read + response write), time (per-connection
# read timeout), net (loopback TcpListener/TcpStream), rt (JoinSet to serve
# connections concurrently), macros (tokio::select! over accept vs. completion).
tokio = { version = "1.0", default-features = false, features = ["io-util", "time", "net", "rt", "macros"], optional = true }
url = { version = "2", optional = true }

# Control-plane framing shared by the client cores (`control` module). Optional
# so the backend — which keeps its own server-side framing — pulls in neither
# bincode nor the async I/O helpers.
bincode = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[dev-dependencies]
bincode = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
# Async runtime + test macro for the loopback callback-reader tests.
# `test-util` enables paused-time tests of the per-connection read timeout.
tokio = { workspace = true, features = ["test-util"] }
# Lets the `control` module compile for `cargo test -p shared` without any
# features enabled (it is gated on `any(feature = "control-client", test)`).
thiserror = { workspace = true }

[features]
default = []
# Pulls in the `kc_oauth` module and its HTTP/JSON/base64 dependencies.
oauth-client = ["dep:serde_json", "dep:base64", "dep:reqwest", "dep:rustls", "dep:tokio", "dep:url"]
# Pulls in the `control` module: length-prefixed ControlMessage framing and the
# in-band reauth exchange used by the Linux/Windows/Android client cores.
control-client = ["dep:tokio", "dep:bincode", "dep:thiserror"]

