[package]
name = "windows-vpn"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mavi-vpn-client"
path = "src/main.rs"

[[bin]]
name = "mavi-vpn-service"
path = "src/bin/service.rs"

[dependencies]
shared = { workspace = true }
tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
socket2 = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
etherparse = { workspace = true }
reqwest = { version = "0.13", features = ["json", "rustls", "form"], default-features = false }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"

wintun = "0.5"
parking_lot = "0.12"
ctrlc = "3.4"
sha2 = "0.11.0"
rand = "0.10"
base64 = "0.22"
url = "2.5"
webbrowser = "1.0"
wtransport = { workspace = true }
h2 = { workspace = true }
tokio-rustls = { workspace = true }
http = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
