[package]
name = "mavi-vpn-gui"
version = "0.1.0"
edition = "2021"
description = "Mavi VPN Desktop GUI"
license = "MIT"
repository = "https://github.com/zerox80/mavi-vpn"
readme = "../../README.md"
keywords = ["vpn", "quic", "privacy", "tauri"]
categories = ["network-programming", "gui"]

[lib]
name = "mavi_vpn_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[lints]
workspace = true

[dependencies]
shared = { path = "../../shared" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
# Tauri pulls brotli 8.x, whose alloc-no-stdlib 2.x dependency is
# incompatible with newer alloc-stdlib/brotli-decompressor ranges that allow 3.x.
alloc-no-stdlib = "=2.0.4"
alloc-stdlib = "=0.2.2"
brotli-decompressor = "=5.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rustls = { workspace = true }
bincode = { package = "bincode-next", version = "3.0.0-rc.2", features = ["serde"] }
anyhow = "1.0"
rand = "0.10"
sha2 = "0.11"
base64 = "0.22"
url = "2"
reqwest = { version = "0.13", features = ["json", "rustls-no-provider", "form"], default-features = false }
webbrowser = "1.0"
keyring = "3.6"

[dev-dependencies]
tempfile = { workspace = true }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

