[package]
name = "mavivpn"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
quinn = "0.11"
bytes = "1.0"
shared = { path = "../../../../../../shared" } # Relative path to root shared crate
android_logger = "0.13"
log = "0.4"
anyhow = "1.0"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
bincode = "1.3"
