[package]
name = "mavivpn"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.22"
tokio = { workspace = true }
tokio-util = "0.7"
quinn = { workspace = true, default-features = false, features = ["rustls"] }
bytes = { workspace = true }
shared = { workspace = true }
android_logger = "0.15"
log = "0.4"
anyhow = { workspace = true }
rustls = { workspace = true }
bincode = { workspace = true }
libc = "0.2"
serde_json = "1.0"
ring = "0.17"
socket2 = { workspace = true }
etherparse = { workspace = true }
futures-util = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
