[package]
name = "mavivpn"
version = "0.1.0"
edition = "2021"
description = "Mavi VPN Android Rust Core"
license = "MIT"
repository = "https://github.com/zerox80/mavi-vpn"
readme = "../../../../../README.md"
keywords = ["vpn", "quic", "privacy", "android"]
categories = ["network-programming"]

[lib]
crate-type = ["cdylib"]


[lints]
workspace = true

[dependencies]
jni = "0.22"
tokio = { workspace = true }
tokio-util = "0.7"
quinn = { workspace = true, default-features = false, features = ["runtime-tokio", "rustls", "ring"] }
bytes = { workspace = true }
shared = { workspace = true }
http = "1"
h3 = { workspace = true }
h3-quinn = { workspace = true }
android_logger = "0.15"
log = "0.4"
anyhow = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
bincode = { workspace = true }
libc = "0.2"
serde_json = "1.0"

socket2 = { workspace = true }
etherparse = { workspace = true }
futures-util = "0.3"
sha2 = "0.11.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

